loader functionality added

--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,33 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-body{
-  @apply bg-orange-300 text-white
+@layer {
+  .popular {
+    @apply text-orange-400 text-center font-medium w-40 py-1 bg-black capitalize rounded-2xl;
+  }
 }
 
-.popular {
-  @apply text-orange-400 text-center font-medium w-40 py-1 bg-black capitalize rounded-2xl
+.loader {
+  width: 35px;
+  aspect-ratio: 0.75;
+  --c: no-repeat linear-gradient(#333 0 0);
+  background: var(--c) 0% 50%, var(--c) 50% 50%, var(--c) 100% 50%;
+  background-size: 20% 50%;
+  animation: loading 1s infinite linear;
+}
+
+@keyframes loading {
+  20% {
+    background-position: 0% 0%, 50% 50%, 100% 50%;
+  }
+  40% {
+    background-position: 0% 100%, 50% 0%, 100% 50%;
+  }
+  60% {
+    background-position: 0% 50%, 50% 100%, 100% 0%;
+  }
+  80% {
+    background-position: 0% 50%, 50% 50%, 100% 100%;
+  }
 }
