image fetch reduced

--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@
 }
 
 .bg {
-  background-image: url("https://i.dummyjson.com/data/products/8/1.jpg");
+  background-image: url("./Microsoft.jpg");
   background-repeat: no-repeat;
   object-fit: cover;
 }
